git-svn-id: http://arecibo.svn.beanstalkapp.com/clients/trunk@37 9fd78695-1745-4fa9-81b8-4a40a47fd399

--- a/rails/README
+++ b/rails/README
@@ -16,18 +16,11 @@ Installation
 
 Install the plugin, by adding the code to vendor/plugins.
 
-Add in the following into you environment, normally this would be config/environment.rb:
+Add in the following into your environment settings, normally this would be config/environment.rb:
 
 ARECIBO_ACCOUNT_NUMBER = 'youraccountnumber'
 
 Where 'youraccountnumber' is replaced with the account number at: http://www.areciboapp.com/setup/keys/
-
-Optional:
-
-Copy assets/arecibo.rhtml to your app/views directory, you can then have this rendered
-as a result, so if you copy it to app/views/layouts you can add in the following to get a default template after an error:
-
-ARECIBO_RESULT_TEMPLATE = "layouts/arecibo"
 
 Sending errors
 ==============
@@ -57,16 +50,21 @@ There is a rescue_from method that can be used. Add the following into your appl
 Configuration and options
 =========================
 
-The ARECIBO_RESULT_TEMPLATE variable can be set to any value you'd like to render an error back. You'll get
-a @arecibodata available to you which allows you to show any information you'd like to, by default we only
-show the UID for looking up in Arecibo.
-
 You can pass an error to Arecibo at any time anywhere else by doing:
 
   send_errors_to_arecibo ErrorClass
 
 And finally there's a method in arecibo/lib/wrapper.rb called: override_arecibo where you can put any overrides
 or changes to the data you'd like to send, improving the information for you.
+
+Experimental: The ARECIBO_RESULT_TEMPLATE variable can be set to any value you'd like to render an error 
+back. You'll get @arecibodata available to you which allows you to show any information you'd like to,
+by default we only show the UID for looking up in Arecibo.
+
+Copy assets/arecibo.rhtml to your app/views directory, you can then have this rendered
+as a result, so if you copy it to app/views/layouts you can add in the following to get a default template after an error:
+
+ARECIBO_RESULT_TEMPLATE = "layouts/arecibo"
 
 Contributors and License
 ========================
